--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.0.7",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "eslint": "8.30.0",
