--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "@next-auth/xata-adapter": "^0.2.0",
     "@xata.io/client": "^0.21.6",
     "axios": "^1.2.1",
+    "daisyui": "^2.46.0",
     "next": "13.0.7",
     "next-auth": "^4.18.7",
+    "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-qr-code": "^2.0.11",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.30.0",
-    "eslint-config-next": "13.0.7"
+    "eslint-config-next": "13.0.7",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
