--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^2.46.0",
     "next": "13.0.7",
     "next-auth": "^4.18.7",
+    "nodemailer": "^6.8.0",
     "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
