--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/xata-adapter": "^0.2.0",
+    "@sendgrid/mail": "^7.7.0",
     "@tailwindcss/forms": "^0.5.3",
     "@xata.io/client": "^0.21.6",
     "axios": "^1.2.1",
